--- a/demo.html
+++ b/demo.html
@@ -36,9 +36,7 @@
         }
         .u-tab{
             height: 34px;
-            width: 70%;
-            position: absolute;
-            margin: 10px 0px;
+            margin: 10px auto;
             line-height: 34px;
             border-radius: 8px;
             border:1px solid #858282;
@@ -54,7 +52,9 @@
             text-align: center;
             color: #fff;
         }
-
+        .u-tab li:nth-child(2){
+            border-right: none;
+        }
 
     </style>
     <title>webread</title>
