--- a/demo.html
+++ b/demo.html
@@ -47,7 +47,7 @@
         }
         .u-tab li{
             display: inline-block;
-            width: 49%;
+            width: 45%;
             border-right: 1px solid #858382;
             text-align: center;
             color: #fff;
@@ -55,7 +55,12 @@
         .u-tab li:nth-child(2){
             border-right: none;
         }
-
+        .m-button-bar{
+            width:70%;
+            max-width:800px;
+            padding:5px ;
+            margin:10px auto;
+        }
     </style>
     <title>webread</title>
 </head>
