--- a/demo.html
+++ b/demo.html
@@ -131,6 +131,12 @@
             display: inline-block;
             vertical-align: -14px;
         }
+        .bk-container:nth-of-type(2){
+            background: #736357;
+        }
+        .bk-container:nth-of-type(3){
+            background: #e9bb4c;
+        }
         .bk-container-current{
             position: absolute;
             width:32px;
@@ -141,12 +147,49 @@
             top: -2px;
             left:-2px;
         }
+        .nav-panel-bk{
+            position: fixed;
+            bottom:0;
+            height:70px;
+            width: 100%;
+            background: #000;
+            opacity: 0.9;
+            z-index: 10000;
+        }
+        .bottom-nav{
+            position: fixed;
+            text-align: center;
+            bottom:0 ;
+            height: 70px;
+            width: 100%;
+            z-index: 10001;
+            color: #fff;
+            background: none;
+        }
+        .item{
+            display: inline-block;
+        }
+        .item{
+            margin: 16px 32px;
+        }
+        .artical-action-mid{
+            position: fixed;
+            z-index: 10002;
+            width: 100%;
+            height: 40%;
+            top:30%;
+        }
     </style>
     <title>webread</title>
 </head>
 <body>
     <div id="root" class="container">
-        <div id="top-nav" class="top-nav">
+
+        <div class="m-artical-action" >
+            <div class="artical-action-mid" id="action_mid"></div>
+        </div>
+
+        <div id="top-nav" class="top-nav" style="display:none;">
             <div class="icon-back"></div>
             <div class="nav-title">返回书架</div>
         </div>
@@ -180,8 +223,8 @@
                 <li id="next_button">下一章</li>
             </ul>
         </div>
-        <div class="nav-panel-bk"></div>
-        <div id="font-container" class="nav-panel" >
+        <div class="nav-panel-bk" style="display: none"></div>
+        <div id="font-container" class="nav-panel" style="display: none" >
             <div class="child-mod">
                 <span>字号</span>
                 <button id="large-font" class="font-size-button">大</button>
@@ -190,28 +233,40 @@
             <div class="child-mod">
                 <span>背景</span>
                 <div class="bk-container">
-                    <div class="bk-container-current">
-                    </div>
+                    <div class="bk-container-current"></div>
+                </div>
+                <div class="bk-container">
+                    <div class="bk-container-current"></div>
+                </div>
+                <div class="bk-container">
+                    <div class="bk-container-current"></div>
                 </div>
             </div>
         </div>
-        <div class="item" id="log-button">
-            <div class="icon_log"></div>
-            <div class="icon_text">目录</div>
-        </div>
-        <div class="item"  id="font_button">
-            <div class="icon_night"></div>
-            <div class="icon_font">字体</div>
-        </div>
-        <div class="item" id="night-button">
-            <div class="item-warp" style="display:none" id="day_icon">
-                <div class="icon_day"></div>
-                <div class="icon_text">白天</div>
+        <div class="nav-panel-bk bottom_nav" style="display: none"></div>
+
+        <div class="bottom-nav bottom_nav" style="display: none">
+            <div class="item" id="menu-button">
+                <div class="item-warp">
+                    <div class="icon_menu"></div>
+                    <div class="icon_text">目录</div>
+                </div>
             </div>
-            <div class="item-warp"  id="night_icon">
-                <div class="icon_night"></div>
-                <div class="icon_text">夜间</div>
+            <div class="item"  id="font_button">
+                <div class="icon_tf"></div>
+                <div class="icon_text">字体</div>
             </div>
+            <div class="item" id="night-button">
+                <div class="item-warp" style="display: none" id="day_icon">
+                    <div class="icon_day"></div>
+                    <div class="icon_text">白天</div>
+                </div>
+                <div class="item-warp"  id="night_icon">
+                    <div class="icon_night"></div>
+                    <div class="icon_text">夜间</div>
+                </div>
+        </div>
+
         </div>
     </div>
 
@@ -223,9 +278,59 @@
     <script src="script/jquery.jsonp.js"></script>
     <script>
         (function(){
-
-            }
+            var Util = (function(){
+                var prefix = 'html5_';
+                var StorageGetter = function(key){
+                    return localStorage.getItem(prefix + key);
+                }
+                var StorageSetter = function (key,val) {
+                    return localStorage.setItem(prefix + key,val);
+                }
+                return{
+                    StorageGetter:StorageGetter,
+                    StorageSetter:StorageSetter
+                }
+            })();
         )();
+        var Dom ={
+            top_nav: $('#top-nav'),
+            bottom_nav :$('.bottom_nav')
+        }
+        function main() {
+            //todo 整个项目的入口函数
+            EvenHanlder();
+
+        }
+        function ReadModel() {
+            //todo 实现和阅读器相关的数据交互的方法
+
+
+        }
+        function ReadBaseFrame() {
+            //todo 渲染基本的UI结构
+
+        }
+
+        function EvenHanlder() {
+            //todo 交互的事件锁定
+
+            $('#action_mid').click(function () {
+                if (Dom.top_nav.css('display') == 'none'){
+                    Dom.bottom_nav.show();
+                    Dom.top_nav.show();
+                }else{
+                    Dom.top_nav.hide();
+                    Dom.bottom_nav.hide();
+                }
+            })
+
+        }
+
+        function f() {
+
+        }
+
+
     </script>
 </body>
 </html>
